@@ -45,9 +45,8 @@ public class DirectStretchUtils {
     public static StretchDataInfo getStretchDataMask(PlotState state, ActiveFitsReadGroup frGroup, int tileSize, long maskBits)
             throws Exception {
         FitsRead fr= frGroup.getFitsRead(state.firstBand());
-        float [] float1d= fr.getRawFloatAry();
+        float [] flip1d= fr.getRawFloatAryFlipped(false);
         StretchVars sv= getStretchVars(fr,tileSize, CompressType.FULL);
-        float [] flip1d= flipFloatArray(float1d,sv.totWidth,sv.totHeight);
         List<ImageMask> maskList=  new ArrayList<>();
 
         for(int j= 0; (j<31); j++) {
@@ -63,12 +62,12 @@ public class DirectStretchUtils {
     private static StretchDataInfo getStretchStandard(PlotState state, FitsRead fr, int tileSize, CompressType ct)
             throws Exception {
         StretchVars sv= getStretchVars(fr,tileSize, ct);
-        float [] float1d= fr.getRawFloatAry();
-        float [] flip1d= flipFloatArray(float1d,sv.totWidth,sv.totHeight);
+        float [] flip1d= fr.getRawFloatAryFlipped(true);
         RangeValues rv= state.getRangeValues();
+        Histogram histogram= fr.getHistogram();
 
         var sTileList = doTileStretch(sv,tileSize, StretchStandardTile::new,
-                (stdef, strContainer) -> () -> strContainer.stretch(stdef, rv, flip1d,fr.getHeader(),fr.getHistogram()) );
+                (stdef, strContainer) -> () -> strContainer.stretch(stdef, rv, flip1d,fr.getHeader(),histogram) );
         return buildStandardResult(sTileList,rv,sv.totWidth,sv.totHeight,ct);
     }
 
@@ -82,7 +81,7 @@ public class DirectStretchUtils {
         int bPosQuarter=0;
         Band[] bands= state.getBands();
         ThreeCComponents tComp= get3CComponents(frGroup,sv.totWidth,sv.totHeight,state);
-        RGBIntensity rgbI= get3CRGBIntensity(state.getRangeValues(),frGroup,bands);
+        RGBIntensity rgbI= get3CRGBIntensity(state,frGroup,bands);
          new ArrayList<Stretch3CTile>(sv.tileLen);
 
         var sTileList =doTileStretch(sv,tileSize, Stretch3CTile::new,
@@ -153,11 +152,11 @@ public class DirectStretchUtils {
 
     private static void invokeList(List<Callable<Void>> taskList) throws Exception {
         if (taskList.size()==1) {
-            taskList.get(0).call();
+            taskList.getFirst().call();
         }
         else {
             var results= exeService.invokeAll(taskList);
-            if (results.stream().filter(Future::isCancelled).toList().size()>0) {
+            if (!results.stream().filter(Future::isCancelled).toList().isEmpty()) {
                 throw new InterruptedException("Not all tiles completed");
             }
         }
@@ -206,20 +205,22 @@ public class DirectStretchUtils {
         for(Band band : bands) {
             FitsRead bandFr= frGroup.getFitsRead(band);
             idx= band.getIdx();
-            float1dAry[idx] = flipFloatArray(bandFr.getRawFloatAry(),totWidth,totHeight);
+            float1dAry[idx] = bandFr.getRawFloatAryFlipped(false);
             imHeadAry[idx]= new ImageHeader(bandFr.getHeader());
             histAry[idx]= bandFr.getHistogram();
         }
         return new ThreeCComponents(float1dAry,imHeadAry,histAry);
     }
 
-    private static RGBIntensity get3CRGBIntensity(RangeValues rv, ActiveFitsReadGroup frGroup, Band[] bands) {
+    private static RGBIntensity get3CRGBIntensity(PlotState state,ActiveFitsReadGroup frGroup, Band[] bands) {
         RGBIntensity rgbIntensity = new RGBIntensity();
         boolean useIntensity= false;
-        if (rv.rgbPreserveHue() && bands.length==3) {
+        if (state.getRangeValues().rgbPreserveHue() && bands.length==3) {
             FitsRead [] fitsReadAry= new FitsRead[] {
                     frGroup.getFitsRead(RED), frGroup.getFitsRead(GREEN), frGroup.getFitsRead(BLUE), };
-            for(int i=0; (i<3); i++) rgbIntensity.addRangeValues(fitsReadAry, i, rv);
+            rgbIntensity.addRangeValues(fitsReadAry, 0, state.getRangeValues(RED));
+            rgbIntensity.addRangeValues(fitsReadAry, 1, state.getRangeValues(GREEN));
+            rgbIntensity.addRangeValues(fitsReadAry, 2, state.getRangeValues(BLUE));
             useIntensity= true;
         }
         return useIntensity ? rgbIntensity : null;
